Fixed log and social box

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header id="masthead">
     <div class="container">
       <a href="https://www.linkedin.com/in/albertfactora" id="logo">albertFACTORA</a>
-      <nav>
+      <nav class="navbar">
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
